tests/baselines/reference/override_js3.errors.txt
a.js(7,5): error TS8009: The 'override' modifier can only be used in TypeScript files.


==== a.js (1 errors) ====
    class B {
        foo (v) {}
        fooo (v) {}
    }
    
    class D extends B {
        override foo (v) {}
        ~~~~~~~~
!!! error TS8009: The 'override' modifier can only be used in TypeScript files.
        /** @override */
        fooo (v) {}
    }
    